# gladius

./: .committed.toml  Cargo.toml  README.md  cliff.toml  flake.nix  justfile
.github/workflows/: benchmarks.yml  build.yml  check.yml  release.yml  update-flake.yml  version-check.yml
benches/: math_benchmarks.rs  statistics_benchmarks.rs
just/: build.just
src/: session.rs  statistics.rs  statistics_tracker.rs
