[package]
name = "gladius"
description = "A library for writing typing-trainers"
readme = "README.md"
version = "0.4.2" 
edition = "2024" 
authors = ["Mads Ahlquist Jensen <madsaj10@outlook.com>"]
repository = "https://github.com/mahlquistj/octotype"
license = "MIT"
keywords = ["typing-trainer", "typing"] 
categories = ["mathematics", "algorithms"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]

[dependencies]
web-time = "1.1.0" 
simple-mermaid = "0.2.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "math_benchmarks"
harness = false

[[bench]]
name = "statistics_benchmarks"
harness = false
